--- a/css/v2.css
+++ b/css/v2.css
@@ -20,4 +20,11 @@
   
   .card {
     background: blue;
+    
+    margin: 1%;
+    float: left;
+    height: 24vw;
+  }
+  .flipped {
+    background-color: rgb(255,0,0);
   }
