--- a/css/v2.css
+++ b/css/v2.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Modak&display=swap');
 
 body{
-    background-color: grey;
+    background-color: rgb(59, 59, 59);
 }
 
 .UeberschriftClass{
     display: flex;
     justify-content: center;
     text-align: center;
-    font-family: 'Modak';
+    font-family: 'Sans Sarif';
 }
 
 
@@ -16,7 +16,7 @@ body{
     display: flex;
     justify-content: center;
     margin-top: 1%;
-    background-color: grey;
+    background-color: rgb(59, 59, 59);
 }
 
 .deck{
